# perception

./: README.md  README.md~  controller_manager_msgs.srv  rospy  tags
angle_detector/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
angle_detector/launch/: edge_leg_detector.launch
angle_detector/src/: detector.cpp  detector.cpp~
door_recognition/: CMakeLists.txt  CMakeLists.txt~  package.xml
door_recognition/launch/: auto_detect_behavior_demo.launch  detectors_services.launch  detectors_services.launch~  octomap.launch
door_recognition/src/: door_detector.cpp  findit.cpp
door_recognition/srv/: DetectDoor.srv  DetectDoor.srv~
handle_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
handle_detector/launch/: door_open_task.launch  localization_sensor.launch  localization_sensor.launch~  localization_sensor2.launch
handle_detector/src/: frames.gv  localization.cpp
handle_detector/srv/: localize_handle.srv~
handle_tracking/: CMakeLists.txt  CMakeLists.txt~  package.xml
handle_tracking/include/: object_scan.h
handle_tracking/src/: object_scan.cpp  scanning_test.cpp
handle_tracking/srv/: localize_handle.srv  objectfinder.srv
object_registration/: CMakeLists.txt  CMakeLists.txt~  package.xml
object_registration/pcd_saved_files/: door.pcd  doorv2.pcd  doorv3.pcd  doorv4.pcd  doorv5.pcd  doorv6.pcd  doorvf.pcd  kleenexdoor.pcd
object_registration/src/: interest_box_marker.cpp  object_localize_service.cpp
object_registration/test/: test_object_localize_service.cpp
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: Door_States.msg
perception_planner/: CMakeLists.txt  package.xml  package.xml~
perception_planner/include/: state_planner.h
perception_planner/launch/: planner.launch
perception_planner/script/: FSM_example.py  door_states_publisher_test.py  posetopic_publisher_test.py  test_FSM.py  topic_publisher_test.py
perception_planner/src/: planner_test.cpp  state_planner.cpp
