<?xml version="1.0"?>
<package>
    <maintainer email="Inatale@utexas.edu">Irene</maintainer>
  <name>angle_detector</name>
   <license>UT austin</license>
  <version>0.0.1</version>
  <description>An angle detector</description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
