<?xml version="1.0"?>
<package format="2">
  <name>perception_msgs</name>
  <version>1.4.1</version>
  <description>Definition of the perception message.</description>
  <maintainer email="steveminq@gmail.com">Steve Minkyu</maintainer>
  <license>BSD</license>
  <url type="website">http://</url>
  <url type="bugtracker">http://</url>
  <author email="steveminq@gmail.com">Steve Minkyu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
