<?xml version="1.0"?>
<package>
  <name>perception_planner</name>
  <version>0.0.0</version>
  <description>perception_planner_package</description>
  <maintainer email="steveminq@utexas.edu">steveminq</maintainer>

  <license>TODO</license>
  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/grid</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>  
  <build_depend>tf</build_depend>  
  <build_depend>handle_detector</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>handle_detector</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
